--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^0.13.6
+  modal_bottom_sheet: ^3.0.0-pre
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.2.19
+
+flutter_native_splash:
+  color: "#7278FC"
+  image: "assets/splash.png"
+  android: true
+  ios: true
+
+flutter_icons:
+  image_path: "assets/splash.png"
+  ios: true
+  remove_alpha_ios: true
+  android: "launcher_icon"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/icon_android.png"
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +77,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
