--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   modal_bottom_sheet: ^3.0.0-pre
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.2.19
+  provider: ^6.0.5
 
 flutter_native_splash:
   color: "#7278FC"
