--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.2.19
   provider: ^6.0.5
+  firebase_core: ^2.15.1
+  firebase_auth: ^4.9.0
 
 flutter_native_splash:
   color: "#7278FC"
